# popug_task

./: README.md
start/: README.md
task_tracker/: db.sqlite3  pyproject.toml
task_tracker/app/: models.py  producer.py  serializers.py  urls.py  views.py
task_tracker/app/management/commands/: consumer.py
task_tracker/app/migrations/: 0001_initial.py
task_tracker/task_tracker/: settings.py  urls.py
