[tool.poetry]
name = "task_tracker"
version = "0.1.0"
description = ""
authors = ["Arseny Kirichenko <mr.ars156@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
djangorestframework-oauth = "^1.1.0"
mkdocs = "^1.3.0"
pika = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
